--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home - bem vindo!</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
     
@@ -30,6 +31,71 @@
             </section> <!--FIM BTN-CONTATO-->
         </div>
     </header>
+    <section class="hero-site">
+        <div class="interface">
+            <div class="txt-hero">
+                <h1>Descubra um <span>novo mundo</span></h1>
+                <p>Ecnontre destinos que ficarão para sempre em sua memoria <span>com um orçamento que cabe no seu bolso</span></p>
+                <a href="#"><button>Quero conheçer</button></a>
+            </div>
+        </div>
+    </section> <!--FIM HERO-SITE-->
+    <section class="vantagens">
+        <div class="interface">
+            <article class="itens-container">
+                <div class="txt-itens">
+                    <h3><span>Viaje</span> com <br>conforto</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quia earum eos saepe vero! Natus dicta quaerat, quis voluptatem expedita aliquam voluptates, eaque pariatur laborum sapiente quos, nesciunt nobis deleniti ad.</p>
+                </div>
+                <div class="img-itens">
+                    <img src="images/aviao.png" alt="Avião">
+                </div>
+            </article>
+
+            <article class="itens-container">
+                <div class="img-itens">
+                    <img src="images/carro.png" alt="Carro">
+                </div>
+                <div class="txt-itens">
+                    <h3><span>Os</span> melhores <br>destinos</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem consectetur explicabo soluta ullam error tempore eum ea rem architecto animi, maiores suscipit nihil minima unde rerum cum saepe accusamus et?</p>
+                </div>
+            </article>
+
+            <article class="itens-container">
+                <div class="txt-itens">
+                    <h3><span>Os</span> melhores <br>hoteis</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor nesciunt, vel modi in ratione sint quasi voluptatum accusamus, voluptatibus deserunt fugiat nam voluptatem expedita placeat quod eaque esse minus similique.</p>
+                </div>
+                <div class="img-itens">
+                    <img src="images/hoteis.png" alt="Hotel">
+                </div>
+            </article>
+        </div>
+    </section> <!--FIM  VANTAGENS-->
+    <section class="contato">
+        <div class="interface">
+            <article class="txt-contato">
+                <h3>fale agora com a <span>nossa equipe</span></h3>
+                <p>E solicite um orcamento que cabe no seu bolso</p>
+            </article>
+            <article class="icons-contato">
+                <a href="#">
+                    <button><i class="bi bi-whatsapp"></i> <p>Chamar no whatsapp</p></button>
+                </a>
+                <a href="#">
+                    <button><i class="bi bi-envelope-at-fill"></i> <p>Enviar e-mail</p></button>
+                </a>
+                <a href="#">
+                    <button><i class="bi bi-telephone-fill"></i> <p>Ligar</p></button>
+                </a>
+                <a href="#">
+                    <button><i class="bi bi-ui-checks"></i> <p>Formulário</p></button>
+                </a>
+            </article>
+
+        </div>
+    </section> <!--FIM CONTATO-->
 
 </body>
 </html>
