commit da sessão de hoteis e inclusão de efeito paralax

--- a/index.html
+++ b/index.html
@@ -96,6 +96,14 @@
 
         </div>
     </section> <!--FIM CONTATO-->
+    <section class="hoteis">
+        <div class="interface">
+            <h3>Hospedagens? <span>Deixa com a gente</span></h3>
+            <p>Os melhores hoteis e pousadas para o máximo de conforto para você e sua família</p>
+            <a href="#"><button>Conheça os hotéis</button></a>
+        </div>
+        <div class="overlay"></div>
+    </section> <!--FIM HOTEIS-->
 
 </body>
 </html>
