--- a/index.html
+++ b/index.html
@@ -178,10 +178,10 @@
                 <a href="">Marketing</a>
             </section>
             <section class="botton-footer">
-                <p>Wesomelo Studios &copy; 2024 Todos os direitos reservados</p>
+                <p>Desenvolvido por Wesomelo Studio 2024 &copy; Todos os direitos reservados</p>
             </section>
         </div>
     </footer>
-
+    
 </body>
 </html>
